build: fix many build issues
Co-authored-by: Sébastien PONT <seba1204@users.noreply.github.com>